fixed issue with spacing at the bottom of lineup,etc

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,5 +1,5 @@
 BODY {
-	background: url(/img/mainbg.jpg) no-repeat bottom center fixed; 
+	background: url(/img/mainbg.jpg) no-repeat top center fixed; 
 	font-size : 1em;
 	height : 100%;
 }
@@ -31,9 +31,9 @@ a {
 }
 #main {
 	clear:both;
-	margin: 0px auto 10px;
+	margin: 0px auto 20px;
 	margin-top: 120px;
-	width : 85%;
+	width : 90%;
 	background-image: linear-gradient(to bottom, #222222 0%, #111111 100%);
 	-ms-linear-gradient(top, #222222 0%, #111111 100%);
 	-moz-linear-gradient(top, #222222 0%, #111111 100%);
@@ -48,7 +48,11 @@ a {
 	border-right-style: solid;
 	border-left-color : #006BA3;
 	border-right-color : #006BA3;
+	border-bottom-color : #006BA3;
+	border-bottom-style : solid;
+	border-bottom-width: 0.1em;
 	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
 	
 	
 
